# MarketplaceTracker

./: .gitignore  README.md  pyproject.toml
apis/: apify_api.py  base_api.py  marketcheck_api.py
backend/: pyproject.toml
backend/app/: main.py  utils.py
backend/app/fetchers/: __init__.py  apify_fetcher.py  auto_dev_fetcher.py  base_fetcher.py  marketcheck_fetcher.py  utils.py
backend/src/: main.py  utils.py
backend/src/fetchers/: apify_fetcher.py  auto_dev_fetcher.py  base_fetcher.py
